# sape

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  faux_data.csv
configs/: __init__.py  categories.yaml  logging_config.py
src/analysis/: __init__.py  analyzer.py  visualizations.py
src/categorization/: __init__.py  categorizer.py
src/data/: __init__.py  cleaner.py  exceptions.py  loader.py  tabulaloader.py
src/ui/: __init__.py  components.py
tests/: conftest.py
tests/unit/: test_analyzer.py  test_categorizer.py  test_cleaner.py
